# gitnote

./: .gitignore  CMakeLists.txt  Doxyfile  gitnote.sln  readme.md  todo.md
doc/html/: annotated.html  class_textedit-members.html  class_textedit.html  classes.html  files.html  hierarchy.html  index.html  textedit_8h_source.html
doc/html/search/: classes_0.js
doc/latex/: annotated.tex  class_textedit.eps  class_textedit.tex  files.tex  hierarchy.tex  refman.tex  textedit_8h_source.tex
textedit/: CMakeLists.txt  main.cpp  textedit.cpp  textedit.h  textedit.pri  textedit.pro  textedit.qrc  textedit.ui  textedit.vcxproj  textedit.vcxproj.filters  textedit_zh.qm  textedit_zh.ts
textedit/i18n/: textedit_zh.qm  textedit_zh.ts
